components/instances/maas-instance/chart/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  controllerName: "openshift.io/gateway-controller/v1"
